# PargonMath

./: CMakeLists.txt  README.md
Include/Pargon/: Math.h
Include/Pargon/Math/: Angle.h  Arithmetic.h  Matrix.h  Point.h  Quaternion.h  Rotation.h  Trigonometry.h  Vector.h
Source/Core/: Angle.cpp  Arithmetic.cpp  Matrix.cpp  Point.cpp  Quaternion.cpp  Rotation.cpp  Trigonometry.cpp  Vector.cpp
Source/Dependencies/CML/: CMakeLists.txt  Info.txt
Source/Dependencies/CML/cml/mathlib/: matrix_rotation.h  quaternion_rotation.h  vector_angle.h
